18-08-2014
Version 1.7.5.dev

[Feature] - Added report of packages will be installed with options
            `slpkg -s sbo <package>`
            `slpkg -s slack <package>`
            `slpkg -c slack upgrade`

17-08-2014
Version 1.7.4

[Updated] - Bugfix NameError: global name 'getpass' is not defined

[Feature] - Added downloaded .asc files to upgrade or install 
            packages from Slackware tree.
            Added calculate file sizes in the process of installing 
            packages or upgrading from Slackware mirrors

16-8-2014
Verion 1.7.3

[Updated] - Sort the packets in the list view. We thank Dave for help
            https://github.com/wvragga.
[Updated] - Bugfix reinstall lilo after upgrading kernel.
[Updated] - Removed some code system and replaced with Python code.
[Updated] - Reinstall if packages exist and upgrading if not in options
            slpkg -s slack <packages>
[Updated] - New paths created, ChangeLog.txt saved in /var/log/slpkg
            and SLACKBUILDS.TXT in /var/lib/slpkg/sbo_repo
[Updated] - Upgrade initilazation method
            Replace mkdir -p with os.mkdir and create directories only if not exists

13-08-2014
Version 1.7.2

[Updated] - Fix messages

11-08-2014
Version 1.7.1

[Updated] - Bugfix OSError: [Errno 2] No such file or directory: '/tmp/slpkg/patches/
[Feature] - Change the way to search packages from slackbuilds.org.
            The route search package eventually becomes found after ChangeLog.txt change.

09-08-2014
Version 1.7.0

[Feature] - Added removes packages with all dependencies

04-08-2014
Version 1.6.9

[Updated] - Remove non-useful code
            Fix /tmp/slpkg/readme/ path create

[Feature] - Added build path, drop all packages in Slpkg_Build directory
            Added build and install packages only if new version available and
            package not installed (slpkg -s sbo)
            Added display installed packages in tracking dependencies

01-08-2014
Version 1.6.8
