@@ -33,6 +33,6 @@ def mirrors(name, location):
         http = "http://mirrors.slackware.com/slackware/slackware64-{0}/{1}{2}".format(
                 slack_ver(), location, name)
     else:
-        http = "http://mirrors.slackware.com/slackware/slackware-{0}/{1}{3}".format(
+        http = "http://mirrors.slackware.com/slackware/slackware-{0}/{1}{2}".format(
                 slack_ver(), location, name)
     return http
